--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <body>
     <h1>Play Scrolling Shooter</h1>
     <canvas id="screen" width="1024" height="786"></canvas>
-    <h2>Instructions</h2>
+    <h2>Instructions</h2></br>
+	<text>Press f for basic fire, g for missiles and b for bombs</text></br>
+	<text>killing some enemies will drop more ammo</text>
     <script type="text/javascript" src="bundle.js"></script>
   </body>
 </html>
